tests/run/error_mixed_numeric.out
tests/run/error_mixed_numeric.em:3:12: error: arithmetic operands must be the same numeric type (or both string for '+')
